simple doc add and curd comple
: )
